# OOPrograms2.0

./: Jordani.rar
CreateAndDestroy/: CMakeLists.txt  createanddestroy.cpp  createanddestroy.h
Databases/: rental.sql
LawFirm/: CMakeLists.txt  employee.cpp  employee.h  janitor.cpp  janitor.h  lawyer.cpp  lawyer.h  main.cpp  secretary.cpp  secretary.h
OOB_Video_Rental_Store/: .user.cpp.swp  OOB_Video_Rental_Store.pro  OOB_Video_Rental_Store.pro.user.be8fbaa  customer.h  database.cpp  database.h  inventory.cpp  inventory.h  latefees.cpp  latefees.h  laterental.cpp  laterental.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rental.h  reservation.cpp  reservation.h  transaction.h  user.cpp  user.h  videorentalstore (4).sql
PackageShipping/: PackageShipping.pro  main.cpp  overnightpackage.cpp  overnightpackage.h  package.cpp  package.h  twodaypackage.cpp  twodaypackage.h
Rental/: CMakeLists.txt  customer.h  fee.cpp  fee.h  rental.cpp  rental.h  report.h  title.cpp  title.h  user.h
RentalsGUI/: RentalsGUI.pro  customer.cpp  customer.h  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rental.sql  style.qss  title.cpp  title.h  user.cpp  user.h
Stocks/: Stocks.pro  addTableStructure.sql  customer.h  database.h  financialadvisor.cpp  financialadvisor.h  stocks.cpp  stocks.h  stocks.sql
TestDatabase/: .dbwindow.cpp.swp  TestDatabase.pro  dbwindow.cpp  dbwindow.h  dbwindow.ui  main.cpp
Time/: CMakeLists.txt  main.cpp  time.cpp  time.h
build-CreateAndDestroy-Desktop_Qt_6_6_1_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  (+1 more)
(+826 files in other folders)
